# zoomus

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  README.md  client.py  pyproject.toml  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: python-package.yml
components/: __init__.py  base.py  contacts.py  meeting.py  past_meeting.py  phone.py  recording.py
docs/source/: conf.py  index.rst
pip-wheel-metadata/zoomus.dist-info/: LICENSE.txt  METADATA  top_level.txt
tests/: __init__.py
tests/zoomus/: test_client.py  test_util.py
tests/zoomus/components/: test_base.py
tests/zoomus/components/contacts/: test_get_user_contacts.py  test_list_user_contacts.py  test_search.py
tests/zoomus/components/group/: test_add_members.py  test_create.py  test_delete.py  test_delete_member.py  test_get.py  test_list.py  test_list_members.py
tests/zoomus/components/live_stream/: test_get.py  test_update.py  test_update_status.py
tests/zoomus/components/live_stream_status/: test_update.py
tests/zoomus/components/meeting/: test_add_registrant.py  test_create.py  test_delete.py  test_delete_registrant.py  test_end.py  test_get.py  test_invite_text.py  test_list.py  test_list_registrants.py  test_past_list.py  (+3 more)
zoomus/: __init__.py  client.py  clientServerToServerOAuth.py  util.py
zoomus/components/: __init__.py  base.py  contact_center.py  contacts.py  group.py  live_stream.py  live_stream_status.py  meeting.py  metric.py  past_meeting.py  phone.py  poll.py  recording.py  report.py  role.py  room.py  user.py  webinar.py
(+65 files in other folders)
