[build-system]
requires = [
    "setuptools >= 68.0.0",
    "wheel >= 0.30.0",
]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py27', 'py36', 'py37', 'py38', 'py39']
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.env
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
)/
'''
