[bumpversion]
current_version = 0.1.8
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:zoomus/__init__.py]

[wheel]
universal = 1

[flake8]
ignore = D203
exclude =
    .git,
    .tox,
    docs/conf.py,
    build,
    dist
max-line-length = 119

[metadata]
description-file = README.md
