[bumpversion]
current_version = 1.1.1
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:zoomus/__init__.py]

[bdist_wheel]
universal = 1

[flake8]
ignore = D203
exclude =
    .git,
    .tox,
    docs/conf.py,
    build,
    dist
max-line-length = 119

[metadata]
description-file = README.md

[nosetests]
with-coverage = 1
cover-package = zoomus
cover-branches = 1
